spacing fix on mobile

--- a/wp-content/themes/HighendWP-child/less/_home.less
+++ b/wp-content/themes/HighendWP-child/less/_home.less
@@ -660,6 +660,14 @@
 	}
 }
 
+@media(max-width: 767px){
+	.vc_row{
+		.vc_custom_1519799556921{
+			margin-top: 50px !important;
+		}
+	}
+}
+
 
 /**
  * ----------------------------------------
